TRUS-4271 Switch to new MainTemplate, remove the back links

--- a/app/views/asset/AddAnAssetYesNoView.scala.html
+++ b/app/views/asset/AddAnAssetYesNoView.scala.html
@@ -24,12 +24,11 @@
 @(form: Form[_], draftId: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("addAnAssetYesNo.title")}"
+    title = s"${errorPrefix(form)} ${messages("addAnAssetYesNo.title")}",
+    showBackLink = true
 ) {
 
 @formHelper(action = AddAssetsController.submitOne(draftId), 'autoComplete -> "off") {
-
-    @components.back_link()
 
     @components.error_summary(form.errors)
 
