--- a/app/views/asset/MaxedOutView.scala.html
+++ b/app/views/asset/MaxedOutView.scala.html
@@ -26,12 +26,11 @@
 @(draftId: String, inProgressAssets: Seq[AddRow], completeAssets: Seq[AddRow], heading: String, maxLimit: Int, prefix: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = heading
+    title = heading,
+    showBackLink = true
 ) {
 
     @formHelper(action = AddAssetsController.submitComplete(draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.heading(heading)
 
