--- a/app/views/asset/RemoveAssetYesNoView.scala.html
+++ b/app/views/asset/RemoveAssetYesNoView.scala.html
@@ -24,12 +24,11 @@
 @(form: Form[_], draftId: String, index: Int, prefix: String, asset: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages(s"$prefix.removeYesNo.title")}"
+    title = s"${errorPrefix(form)} ${messages(s"$prefix.removeYesNo.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = RemoveAssetYesNoController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
