--- a/app/views/asset/TaxableInfoView.scala.html
+++ b/app/views/asset/TaxableInfoView.scala.html
@@ -24,12 +24,11 @@
 @(draftId: String, is5mldEnabled: Boolean)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = if(is5mldEnabled) {messages("assetInterruptPage.5mld.title")} else {messages("assetInterruptPage.title")}
+    title = if(is5mldEnabled) {messages("assetInterruptPage.5mld.title")} else {messages("assetInterruptPage.title")},
+    showBackLink = true
 ) {
 
     @formHelper(action = AssetInterruptPageController.onSubmit(draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @if(is5mldEnabled){
             @components.heading_with_caption("assetInterruptPage.5mld")
