--- a/app/views/RemoveIndexView.scala.html
+++ b/app/views/RemoveIndexView.scala.html
@@ -26,12 +26,11 @@
 @(prefix : String, form: Form[_], index: Int, draftId: String, nameOrDescription : String, route : Call)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages(s"$prefix.title", nameOrDescription)}"
+    title = s"${errorPrefix(form)} ${messages(s"$prefix.title", nameOrDescription)}",
+    showBackLink = true
     ) {
 
     @formHelper(action = route, 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
