--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -34,12 +34,11 @@
 }
 
 @main_template(
-    title = s"${errorPrefix(form)} $title"
+    title = s"${errorPrefix(form)} $title",
+    showBackLink = true
     ) {
 
     @formHelper(action = WhatKindOfAssetController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
