--- a/app/views/asset/buisness/BusinessAnswersView.scala.html
+++ b/app/views/asset/buisness/BusinessAnswersView.scala.html
@@ -25,10 +25,9 @@
 @(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = messages("business.answers.title")
+    title = messages("business.answers.title"),
+    showBackLink = true
 ) {
-
-    @components.back_link()
 
     @components.heading("business.answers.heading")
 
