--- a/app/views/asset/buisness/BusinessInternationalAddressView.scala.html
+++ b/app/views/asset/buisness/BusinessInternationalAddressView.scala.html
@@ -25,12 +25,11 @@
 @(form: Form[_], countryOptions: Seq[InputOption], index:Int, draftId: String, businessName: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("business.internationalAddress.title")}"
+    title = s"${errorPrefix(form)} ${messages("business.internationalAddress.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = BusinessInternationalAddressController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
