--- a/app/views/asset/buisness/BusinessNameView.scala.html
+++ b/app/views/asset/buisness/BusinessNameView.scala.html
@@ -24,12 +24,11 @@
 @(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("business.name.title")}"
+    title = s"${errorPrefix(form)} ${messages("business.name.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = BusinessNameController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
