--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -26,12 +26,11 @@
 @optionalHtmlContent = {<p>@messages("money.value.paragraph1")</p>}
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("money.value.title")}"
+    title = s"${errorPrefix(form)} ${messages("money.value.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = AssetMoneyValueController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
