--- a/app/views/asset/partnership/PartnershipAnswersView.scala.html
+++ b/app/views/asset/partnership/PartnershipAnswersView.scala.html
@@ -25,10 +25,9 @@ formHelper: FormWithCSRF
 @(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = messages("partnership.answers.title")
+    title = messages("partnership.answers.title"),
+    showBackLink = true
 ) {
-
-@components.back_link()
 
 @components.heading("partnership.answers.heading")
 
