--- a/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
@@ -25,10 +25,9 @@
 @(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = messages("propertyOrLand.answers.title")
+    title = messages("propertyOrLand.answers.title"),
+    showBackLink = true
 ) {
-
-@components.back_link()
 
 @components.heading("propertyOrLand.answers.heading")
 
