--- a/app/views/asset/shares/ShareAnswersView.scala.html
+++ b/app/views/asset/shares/ShareAnswersView.scala.html
@@ -18,17 +18,16 @@
 @import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
 
 @this(
-main_template: MainTemplate,
-formHelper: FormWithCSRF
+    main_template: MainTemplate,
+    formHelper: FormWithCSRF
 )
 
 @(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = messages("shares.answers.title")
+    title = messages("shares.answers.title"),
+    showBackLink = true
 ) {
-
-@components.back_link()
 
 @components.heading("shares.answers.heading")
 
