--- a/app/views/asset/shares/ShareClassView.scala.html
+++ b/app/views/asset/shares/ShareClassView.scala.html
@@ -25,12 +25,11 @@
 @(form: Form[_], draftId: String, index : Int, companyName: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("shares.class.title")}"
+    title = s"${errorPrefix(form)} ${messages("shares.class.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = ShareClassController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
