--- a/app/views/asset/shares/ShareQuantityInTrustView.scala.html
+++ b/app/views/asset/shares/ShareQuantityInTrustView.scala.html
@@ -24,12 +24,11 @@
 @(form: Form[_], draftId: String, index: Int, companyName: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
-    title = s"${errorPrefix(form)} ${messages("shares.quantityInTrust.title")}"
+    title = s"${errorPrefix(form)} ${messages("shares.quantityInTrust.title")}",
+    showBackLink = true
 ) {
 
     @formHelper(action = ShareQuantityInTrustController.onSubmit(index, draftId), 'autoComplete -> "off") {
-
-        @components.back_link()
 
         @components.error_summary(form.errors)
 
