--- a/app/views/components/AddToList.scala.html
+++ b/app/views/components/AddToList.scala.html
@@ -14,12 +14,23 @@
  * limitations under the License.
  *@
 
-@(messageKeyPrefix: String)(implicit messages: Messages)
+@import viewmodels.AddRow
+@import views.html.components.AddToRow
 
-<div class="govuk-warning-text">
-    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-    <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">@messages("site.warning")</span>
-        @messages(s"$messageKeyPrefix.warning")
-    </strong>
+@this(
+ addToRow: AddToRow
+)
+
+@(data: Seq[AddRow], id: String, entity : String)(implicit messages: Messages)
+
+@if(data.nonEmpty){
+<h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"site.$id")</h2>
+
+<div class="govuk-form-group">
+ <dl id="data-list--@id" class="hmrc-add-to-a-list hmrc-add-to-a-list--short">
+  @for(item <- data) {
+   @addToRow(item)
+  }
+ </dl>
 </div>
+}
