--- a/app/views/components/HeadingWithCaption.scala.html
+++ b/app/views/components/HeadingWithCaption.scala.html
@@ -14,11 +14,13 @@
  * limitations under the License.
  *@
 
-@(messagePrefix: String, optionalParam: Option[String] = None, headingParam: Option[String] = None)(implicit messages: Messages)
+@this(
+ subHeading: SubHeading
+)
 
-<header class="hmrc-page-heading">
- <h1 class="govuk-heading-xl">
-  @components.sub_heading(messagePrefix, headingParam.getOrElse(""))
-  @messages(s"$messagePrefix.heading", optionalParam.getOrElse(""))
- </h1>
-</header>
+@(messagePrefix: String, optionalParam: Option[String] = None, captionParam: Option[String] = None)(implicit messages: Messages)
+
+<h1 class="govuk-heading-l">
+ @subHeading(s"$messagePrefix.caption", captionParam.getOrElse(""))
+ @messages(s"$messagePrefix.heading", optionalParam.getOrElse(""))
+</h1>
