--- a/app/views/components/InsetText.scala.html
+++ b/app/views/components/InsetText.scala.html
@@ -14,23 +14,13 @@
  * limitations under the License.
  *@
 
-@import viewmodels.AnswerRow
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-@(row: AnswerRow)(implicit messages: Messages)
+@this(govukInsetText : GovukInsetText)
 
-<li>
-    <div class="cya-question">@messages(row.label, row.labelArg)</div>
-    <div class="cya-answer">
-        @row.answer
-    </div>
-    @if(row.canEdit) {
-        <div class="cya-change">
-            @row.changeUrl.map { url =>
-            <a href='@url'>
-                <span aria-hidden="true">@messages("site.edit")</span>
-                <span class="visually-hidden">@messages("site.hidden-edit", messages(row.label, row.labelArg))</span>
-            </a>
-            }
-        </div>
-    }
-</li>
+@(messageKey: String, id: String)(implicit messages: Messages)
+
+@govukInsetText(InsetText(
+ id = Some(s"inset-text--$id"),
+ content = Text(messages(messageKey))
+))
