--- a/app/views/components/Link.scala.html
+++ b/app/views/components/Link.scala.html
@@ -14,14 +14,8 @@
  * limitations under the License.
  *@
 
-@(overrideMessage : Option[String] = None, submitClass: Option[String] = None)(implicit messages: Messages)
+@this()
 
-<div class="section">
-    <button id="submit" formnovalidate class="button @if(submitClass.nonEmpty){@{submitClass.get}}">
-         @if(overrideMessage.isEmpty) {
-             @messages("site.save.continue")
-         } else {
-             @messages(overrideMessage.get)
-         }
-    </button>
-</div>
+@(href : String, id : String = "", key : String, openInNewWindow: Boolean = false)(implicit messages: Messages)
+
+<a class="govuk-link" id="@id" href="@href" @if(openInNewWindow) {target="_blank"}>@messages(key)</a>
