TRUS-4271 Update Stylesheets

--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -44,7 +44,7 @@
         @components.input_radio(
             field = form("value"),
             legend = messages(s"$prefix.additional-content"),
-            legendClass = Some("heading-medium"),
+            legendClass = Some("govuk-heading-m"),
             inputs = AddAssets.options(prefix),
             legendAsH2Heading = true
         )
