--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -45,7 +45,7 @@
         @components.input_radio(
             field = form("value"),
             legend = heading.toString,
-            legendClass = Some("heading-large"),
+            legendClass = Some("govuk-heading-l"),
             inputs = options,
             legendAsHeading = true
         )
