--- a/app/views/asset/buisness/BusinessValueView.scala.html
+++ b/app/views/asset/buisness/BusinessValueView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.business.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    inputText: InputText,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index: Int, businessName: String)(implicit request: Request[_], messages: Messages)
@@ -30,9 +34,9 @@
 
     @formHelper(action = BusinessValueController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("business.currentValue.heading", businessName),
             labelClass=Some("govuk-heading-l"),
@@ -43,7 +47,7 @@
             inputMode = Some("numeric")
         )
 
-        @components.submit_button()
+        @submitButton()
 
     }
 }
