--- a/app/views/asset/buisness/BusinessAnswersView.scala.html
+++ b/app/views/asset/buisness/BusinessAnswersView.scala.html
@@ -16,10 +16,13 @@
 
 @import controllers.asset.business.routes._
 @import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
+@import views.html.components.{SubmitButton, Heading}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    heading: Heading
 )
 
 @(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
@@ -29,7 +32,7 @@
     showBackLink = true
 ) {
 
-    @components.heading("business.answers.heading")
+    @heading("business.answers.heading")
 
     @for(section <- answerSections){
         @{
@@ -41,6 +44,6 @@
     }
 
     @formHelper(action = BusinessAnswersController.onSubmit(index, draftId), 'autoComplete -> "off") {
-        @components.submit_button()
+        @submitButton()
     }
 }
