--- a/app/views/asset/noneeabusiness/NameView.scala.html
+++ b/app/views/asset/noneeabusiness/NameView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.noneeabusiness.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    inputText: InputText,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
@@ -30,16 +34,16 @@
 
     @formHelper(action = NameController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
-          field = form("value"),
-          label = messages("nonEeaBusiness.name.heading"),
-          inputClass = Some("form-control-3-4"),
+        @inputText(
+          field          = form("value"),
+          label          = messages("nonEeaBusiness.name.heading"),
+          inputClass     = Some("form-control-3-4"),
           labelAsHeading = true,
-          labelClass=Some("govuk-heading-l")
+          labelClass     =Some("govuk-heading-l")
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
