--- a/app/views/asset/buisness/BusinessAnswersView.scala.html
+++ b/app/views/asset/buisness/BusinessAnswersView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import controllers.asset.business.routes._
-@import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
+@import viewmodels.Section
 import uk.gov.hmrc.govukfrontend.views.viewmodels.content.{HtmlContent, Text}
 import uk.gov.hmrc.govukfrontend.views.viewmodels.summarylist._
 @import utils.SectionFormatter.formatSections
