--- a/app/views/asset/buisness/BusinessInternationalAddressView.scala.html
+++ b/app/views/asset/buisness/BusinessInternationalAddressView.scala.html
@@ -16,7 +16,7 @@
 
 @import controllers.asset.business.routes._
 @import utils.InputOption
-@import views.html.components.{ErrorSummary, InputText, InternationalAddress, SubmitButton}
+@import views.html.components.{ErrorSummary, InternationalAddress, SubmitButton}
 
 @this(
     main_template: MainTemplate,
