--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.money.routes._
+@import views.html.components.{InputText, ErrorSummary, SubmitButton}
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    errorSummary: ErrorSummary,
+    inputText: InputText,
+    submitButton: SubmitButton
 )
 
 @(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
@@ -32,20 +36,19 @@
 
     @formHelper(action = AssetMoneyValueController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("money.value.heading"),
             labelClass = Some("govuk-heading-l"),
-            symbol = Some("currency"),
-            symbolText = Some(messages(s"symbolText.asSterling")),
+            prefix = Some(messages(s"symbolText.asSterling")),
             hint = Some(messages(s"money.value.hint")),
             optionalHtmlContent = Some(optionalHtmlContent),
             labelAsHeading = true,
             inputMode = Some("numeric")
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
