--- a/app/views/asset/noneeabusiness/AnswersView.scala.html
+++ b/app/views/asset/noneeabusiness/AnswersView.scala.html
@@ -16,10 +16,16 @@
 
 @import controllers.asset.noneeabusiness.routes._
 @import viewmodels._
+@import views.html.components.{SubmitButton, Heading}
+@import utils.SectionFormatter.formatSections
 
 @this(
     main_template: MainTemplate,
-    formHelper: FormWithCSRF
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    heading: Heading,
+    govukSummaryList: GovukSummaryList
+
 )
 
 @(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
@@ -29,18 +35,11 @@
     showBackLink = true
 ) {
 
-    @components.heading("nonEeaBusiness.answers.heading")
-
-    @for(section <- answerSections){
-        @{
-            section match {
-                case a: AnswerSection => components.answer_section(a)
-                case r: RepeaterAnswerSection => components.repeater_answer_section(r)
-            }
-        }
-    }
-
     @formHelper(action = AnswersController.onSubmit(index, draftId), 'autoComplete -> "off") {
-        @components.submit_button()
+        @heading("nonEeaBusiness.answers.heading")
+
+        @govukSummaryList(SummaryList(rows = SectionFormatter.formatSections(answerSections)))
+
+        @submitButton()
     }
 }
