--- a/app/views/asset/partnership/PartnershipAnswersView.scala.html
+++ b/app/views/asset/partnership/PartnershipAnswersView.scala.html
@@ -16,10 +16,14 @@
 
 @import controllers.asset.partnership.routes._
 @import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
+@import views.html.components.{SubmitButton, Heading}
 
 @this(
-main_template: MainTemplate,
-formHelper: FormWithCSRF
+    main_template: MainTemplate,
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    heading: Heading,
+    govukSummaryList: GovukSummaryList
 )
 
 @(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
@@ -29,17 +33,12 @@ formHelper: FormWithCSRF
     showBackLink = true
 ) {
 
-@components.heading("partnership.answers.heading")
-
-    @for(section <- answerSections){
-        @{section match {
-            case a: AnswerSection => components.answer_section(a)
-            case r: RepeaterAnswerSection => components.repeater_answer_section(r)
-            }
-        }
-    }
-
     @formHelper(action = PartnershipAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
-        @components.submit_button()
+
+        @heading("partnership.answers.heading")
+
+        @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
+
+        @submitButton()
     }
 }
