--- a/app/views/asset/partnership/PartnershipDescriptionView.scala.html
+++ b/app/views/asset/partnership/PartnershipDescriptionView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.partnership.routes._
+@import views.html.components.{ErrorSummary, InputText, SubmitButton}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        errorSummary: ErrorSummary,
+        inputText: InputText,
+        submitButton: SubmitButton
 )
 
 @(form: Form[_], index: Int, draftId: String)(implicit request: Request[_], messages: Messages)
@@ -30,9 +34,9 @@
 
     @formHelper(action = PartnershipDescriptionController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @components.error_summary(form.errors)
+        @errorSummary(form.errors)
 
-        @components.input_text(
+        @inputText(
             field = form("value"),
             label = messages("partnership.description.heading"),
             labelClass = Some("govuk-heading-l"),
@@ -40,6 +44,6 @@
             hint = Some(messages("partnership.description.hint"))
         )
 
-        @components.submit_button()
+        @submitButton()
     }
 }
