TRUS-4271 Updated most general views

--- a/app/views/asset/AddAnAssetYesNoView.scala.html
+++ b/app/views/asset/AddAnAssetYesNoView.scala.html
@@ -15,12 +15,15 @@
  *@
 
 @import controllers.asset.routes._
+@import views.html.components.{SubmitButton, ErrorSummary, InputYesNo}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        submitButton: SubmitButton,
+        inputYesNo: InputYesNo,
+        errorSummary: ErrorSummary
 )
-
 @(form: Form[_], draftId: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
@@ -30,15 +33,15 @@
 
 @formHelper(action = AddAssetsController.submitOne(draftId), 'autoComplete -> "off") {
 
-    @components.error_summary(form.errors)
+    @errorSummary(form.errors)
 
-    @components.input_yes_no(
+    @inputYesNo(
       field = form("value"),
       label = messages("addAnAssetYesNo.heading"),
       legendClass = Some("govuk-heading-l"),
       legendAsHeading = true
     )
 
-    @components.submit_button()
+    @submitButton()
   }
 }
