--- a/app/views/ErrorTemplate.scala.html
+++ b/app/views/ErrorTemplate.scala.html
@@ -15,16 +15,18 @@
  *@
 
 @import config.FrontendAppConfig
+@import views.html.components.{SubmitButton, Heading, InputRadio, ErrorSummary}
 
 @this(
     govuk_wrapper: GovukWrapper,
-    appConfig: FrontendAppConfig
+    appConfig: FrontendAppConfig,
+    heading: Heading,
 )
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages)
 
 @contentHeader = {
-  @components.heading(heading)
+  @heading(heading)
 }
 
 @mainContent = {
