--- a/app/views/asset/TaxableInfoView.scala.html
+++ b/app/views/asset/TaxableInfoView.scala.html
@@ -15,10 +15,14 @@
  *@
 
 @import controllers.asset.routes._
+@import views.html.components.{SubmitButton, BulletList, HeadingWithCaption}
 
 @this(
-    main_template: MainTemplate,
-    formHelper: FormWithCSRF
+        main_template: MainTemplate,
+        formHelper: FormWithCSRF,
+        submitButton: SubmitButton,
+        bulletList: BulletList,
+        headingWithCaption: HeadingWithCaption
 )
 
 @(draftId: String, is5mldEnabled: Boolean)(implicit request: Request[_], messages: Messages)
@@ -31,9 +35,9 @@
     @formHelper(action = AssetInterruptPageController.onSubmit(draftId), 'autoComplete -> "off") {
 
         @if(is5mldEnabled){
-            @components.heading_with_caption("assetInterruptPage.5mld")
+            @headingWithCaption("assetInterruptPage.5mld")
         } else {
-            @components.heading_with_caption("assetInterruptPage")
+            @headingWithCaption("assetInterruptPage")
         }
 
         <h2>@messages("assetInterruptPage.subheading1")</h2>
@@ -42,7 +46,7 @@
         <h2>@messages("assetInterruptPage.subheading2")</h2>
         <p>@messages("assetInterruptPage.paragraph2")</p>
 
-        @components.bullet_list(
+        @bulletList(
             "assetInterruptPage",
             List(
                 "bullet1",
@@ -54,7 +58,7 @@
 
         <h2>@messages("assetInterruptPage.subheading3")</h2>
         <p>@messages("assetInterruptPage.paragraph4")</p>
-        @components.bullet_list(
+        @bulletList(
             "assetInterruptPage",
             List(
                 "bullet4",
@@ -67,7 +71,7 @@
 
         <h2>@messages("assetInterruptPage.subheading4")</h2>
         <p>@messages("assetInterruptPage.paragraph7")</p>
-        @components.bullet_list(
+        @bulletList(
             "assetInterruptPage",
             List(
                 "bullet7",
@@ -80,7 +84,7 @@
         @if(is5mldEnabled){
             <h2>@messages("assetInterruptPage.subheading7")</h2>
             <p>@messages("assetInterruptPage.paragraph10")</p>
-            @components.bullet_list(
+            @bulletList(
                 "assetInterruptPage",
                 List(
                     "bullet11",
@@ -97,6 +101,6 @@
         <h2>@messages("assetInterruptPage.subheading6")</h2>
         <p>@messages("assetInterruptPage.paragraph9")</p>
 
-        @components.submit_button(Some("site.onlyContinue"))
+        @submitButton(Some("site.onlyContinue"))
     }
 }
