--- a/app/views/asset/noneeabusiness/AnswersView.scala.html
+++ b/app/views/asset/noneeabusiness/AnswersView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import controllers.asset.noneeabusiness.routes._
-@import viewmodels._
+@import viewmodels.Section
 @import views.html.components.{SubmitButton, Heading}
 @import utils.SectionFormatter.formatSections
 
